--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   "homepage": "https://github.com/mskims/redux-saga-in-korean",
   "devDependencies": {},
   "dependencies": {
-    "gitbook-cli": "2.3.0",
     "gh-pages": "^0.12.0",
+    "gitbook-cli": "2.3.0",
+    "gitbook-plugin-ga": "^2.0.0",
     "rimraf": "^2.6.1"
   }
 }
