--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "dependencies": {
     "gh-pages": "^0.12.0",
     "gitbook-cli": "2.3.0",
-    "gitbook-plugin-ga": "^2.0.0",
+    "gitbook-plugin-edit-link": "^2.0.2",
+    "gitbook-plugin-ga": "^1.0.1",
     "rimraf": "^2.6.1"
   }
 }
