--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ before_install:
 - npm i -g gitbook-cli@2.3.0
 - gitbook install
 deploy:
-  provider: script
-  script: npm run publish
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
   on:
-   branch: master
+    branch: master
