--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 sudo: false
 language: node_js
+
 before_install:
 - npm i -g gitbook-cli@2.3.0
 - gitbook install
+
 script: npm run build
+
+before_deploy:
+  - chmod +x bin/deploy.sh
+
 deploy:
   provider: script
-  script: bin/deploy.sh
-  on:
-    branch: master
+  script: ./bin/deploy.sh
+  skip_cleanup: true
