--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,15 @@ sudo: false
 language: node_js
 node_js:
   - "9"
-# cache:
-#   directories:
-#     - node_modules
+
+cache:
+  directories:
+    - node_modules
 
 before_script:
   - npm i -g gitbook-cli@2.3.0
   - gitbook install
+
 script: npm run build
 
 before_deploy:
